--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
+  sdk: '>=3.0.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,7 +42,7 @@ dependencies:
   animate_do: ^2.1.0
   cached_network_image: ^3.2.1
   carousel_slider: ^4.1.1
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   shimmer: ^2.0.0
 
 dev_dependencies:
